--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -1,32 +1,257 @@
 ---
-title: "Manuscript"
-date: today 
-format: html
+title: "Manuscript title here"
+output: html_document
+author: "Your name here"
 bibliography: bibliography.bib
 csl: vancouver.csl
-# Shorten text to 4-5 paragraphs. Text rn is for the project description
 ---
-## Introduction
 
-Injury has reached epidemic proportions worldwide, disproportionately affecting the most productive and the youngest members of society. Trauma, often synonymously used with serious injury, is defined as a physical injury and the body's associated response.  (1) Furthermore, trauma remains a leading cause of death and disability worldwide, where it is the foremost cause of death among people under the age of 45 and ranks as the fourth leading cause of death across all ages. (2)
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-### Pathophysiology 
+<!-- This is an R Markdown document. Markdown is a simple formatting
+syntax for authoring HTML, PDF, and MS Word documents. For more
+details on using R Markdown see http://rmarkdown.rstudio.com -->
 
-Among trauma-related conditions, traumatic brain injury (TBI) is a major cause of death and disability worldwide and constitutes a significant public health burden. (3) TBI is the result of an external force causing neurological impairments that may be either transient or permanent.  (4) Furthermore, TBI should not be regarded as a single event but rather as a dynamic process. The initial trauma is followed by secondary pathophysiological cascades, including ischemia, oedema, and metabolic disturbances, that develop over time and critically influence long-term outcomes. (5) As such, patients affected often require admission to the intensive care unit (ICU). 
+<!-- This is a comment and will not be present in the compiled
+document. Try "knitting" this document by clicking the knit button up
+to the left, or by running `rmarkdown::render("manuscript.Rmd")` in
+the console and you should only see headings -->
 
-### Management of TBI in the ICU 
+<!-- Structure and most comments are from the Strengthening the
+reporting of observational studies in epidemiology (STROBE) statement,
+see https://www.strobe-statement.org/. For more explanations see the
+paper Strengthening the Reporting of Observational Studies in
+Epidemiology (STROBE):explanation and elaboration.  -->
 
-The management of TBI in the ICU is particularly challenging. Given the heterogeneity and dynamic nature of the condition, care must prioritise the prevention and limitation of secondary systemic threats such as hypoxia, hypercapnia, arterial hypotension, hyponatraemia and pyrexia. Equal attention must also be directed toward secondary intracranial threats, including expanding haematomas, cerebral contusions and rises in intracranial pressure. (5–7) Although these complexities are often anticipated, they render ICU care especially vulnerable to deviations from optimal practice, thereby posing risks to both patient safety and overall quality of care.   
+<!-- Indicate the study’s design with a commonly used term in the
+title, for example: "Associations between resuscitation interventions
+and opportunities for improvement in adult trauma patients: A cohort
+study" -->
 
-The intensive care of patients with TBI has been addressed in both guidelines and reviews. Multiple recent reviews and guideline updates consistently refer to the Brain Trauma Foundation (BTF) Fourth Edition, which remains a central reference for modern management (5–9). According to the BTF, treatment should be initiated when intracranial pressure (ICP) exceeds 22 mmHg. Cerebral perfusion pressure (CPP) should be maintained between 60–70 mmHg. Prophylactic hyperventilation should be avoided within the first 24 hours, and corticosteroid usage should be refrained from. At Karolinska University Hospital, the setting for this study, similar principles are seen in the Traumahandboken. For severe TBI, defined as GCS < 8, early airway protection with intubation in unconscious patients, rapid CT imaging, timely administration of tranexamic acid, and early neurosurgical consultation are recommended. In cases where there are signs of impending herniation, the handbook advises measures such as controlled hyperventilation and osmotherapy with mannitol or hypertonic saline. All this is always in conjunction with urgent neurosurgical evaluation. (Källa Karolinska handboken)  <!-- Make these two into one paragraph, remove local sources such as Karolinska handboken and keep it more generally applicable -->
+Abstract
+========
 
-### Trauma Quality Improvement
+<!-- Provide in the abstract an informative and balanced summary of
+what was done and what was found. Not more than 300 words. -->
 
-Despite the presence of systems and guidelines in place for these patients, trauma care remains vulnerable to errors, deviations from established practice, and treatment delays, all of which may negatively influence outcomes. In response, the American College of Surgeons developed the Trauma Quality Improvement Program (TQIP), a risk-adjusted benchmarking system designed to assess the quality of trauma care. Through audit filters and peer review, it identifies opportunities for improvement (OFI) and ultimately reduces trauma-related mortality (10,11). Previous studies and reviews have discussed preventable trauma deaths where recurring patterns occur, namely, delays in imaging and care, missed injuries, deviations in care regarding airway-related care, haemorrhage control, and fluid management (12–16). Importantly, some of these findings were observed in high-performing level I trauma centres, underscoring that even mature systems remain vulnerable to error. Furthermore, injuries to the central nervous system account for a substantial proportion of trauma-related deaths, as demonstrated in analyses from large registries such as the Arkansas Trauma Registry (16). Yet, while previous research has described OFI in trauma resuscitation and in general ICU trauma cohorts, relatively little is known about the prevalence, nature, and determinants of OFI specifically among patients with TBI.
+Background
+----------
 
-Previous papers at Karolinska University Hospital have contributed to this field by describing OFIs across different aspects of trauma care. In 2023, Hussein A. et al. analysed patient- and process-related factors during trauma resuscitation and concluded that variables such as time to first CT and injury severity were strongly associated with OFI (17). Cao ES. et al. continued the focus on ICU cohorts, presenting that 9.9% ICU-admitted adult trauma patients experienced at least one OFI (1). Most recently, Szolnoky K et al. assessed OFI patterns in trauma cohorts and demonstrated that, although overall incidence declined over time, patients with TBI remained likely to have preventable shortcomings in care (18). 
+Methods
+-------
 
-## Aim
+Results
+-------
 
-As such, this study aims to identify and describe opportunities for improvement in the care of adult trauma patients with TBI admitted to the ICU, and to examine patient- and process-related factors associated with their occurrence.
+Conclusion
+----------
 
+Introduction
+============
+
+<!-- Explain the scientific background and rationale for the
+investigation being reported. End by stating the aim or specific
+objectives, including any prespecified hypotheses. The introduction
+should not be longer than 1-1.5 pages, typically 4-5 paragraphs, each
+6-8 lines long. Support every statement with a citation -->....
+
+
+
+Methods 
+=======
+
+Study design 
+------------
+
+<!-- Present key elements of study design -->
+
+Setting
+-------
+
+<!-- Describe the setting, locations, and relevant dates, including
+periods of recruitment, exposure, follow-up, and data collection -->
+
+Participants
+------------
+
+<!-- Cohort study: Give the eligibility criteria, and the sources and
+methods of selection of participants. Describe methods of
+follow-up. For matched studies, give matching criteria and number of
+exposed and unexposed -->
+
+<!-- Case-control study: Give the eligibility criteria, and the
+sources and + methods of case ascertainment and control
+selection. Give the rationale for the choice of cases and
+controls. For matched studies, give matching criteria and the number
+of controls per case -->
+
+<!-- Cross-sectional study: Give the eligibility criteria, and the
+sources and methods of selection of participants -->
+
+Variables and data sources/measurements
+---------------------------------------
+
+<!-- Clearly define all outcomes, exposures, predictors, potential
+confounders, and effect modifiers. Give diagnostic criteria, if
+applicable. For each variable of interest, give sources of data and
+details of methods of assessment (measurement). Describe comparability
+of assessment methods if there is more than one group -->
+
+Bias 
+----
+
+<!-- Describe any efforts to address potential sources of bias -->
+
+Study size 
+----------
+
+<!-- Explain how the study size was arrived at -->
+
+Quantitative variables
+----------------------
+
+<!-- Explain how quantitative variables were handled in the
+analyses. If applicable, describe which groupings were chosen and why
+-->
+
+Statistical methods
+-------------------
+
+<!-- 
+
+(a) Describe all statistical methods, including those used to control
+for confounding
+
+(b) Describe any methods used to examine subgroups and interactions
+
+(c) Explain how missing data were addressed 
+
+(d) 
+
+Cohort study: If applicable, explain how loss to follow-up was addressed 
+
+Case-control study:If applicable, explain how matching of cases and
+controls was addressed
+
+Cross-sectional study: If applicable, describe analytical methods
+taking account of sampling strategy
+
+(e) Describe any sensitivity analyses
+-->
+
+Results
+=======
+
+<!-- 
+
+Participants
+------------
+
+(a) Report numbers of individuals at each stage of study—eg numbers
+potentially eligible, examined for eligibility, confirmed eligible,
+included in the study, completing follow-up, and analysed
+
+(b) Give reasons for non-participation at each stage
+
+(c) Consider use of a flow diagram
+
+Descriptive data
+----------------
+
+(a) Give characteristics of study participants (eg demographic,
+clinical, social) and information on exposures and potential
+confounders
+
+(b) Indicate number of participants with missing data for each
+variable of interest
+
+(c) Cohort study — Summarise follow-up time (eg, average and total
+amount)
+
+Outcome data
+------------
+
+Cohort study — Report numbers of outcome events or summary measures
+over time
+
+Case-control study — Report numbers in each exposure category, or
+summary measures of exposure
+
+Cross-sectional study — Report numbers of outcome events or summary
+measures
+
+Main results
+------------
+
+(a) Give unadjusted estimates and, if applicable, confounder-adjusted
+estimates and their precision (eg, 95% confidence interval). Make
+clear which confounders were adjusted for and why they were included
+
+(b) Report category boundaries when continuous variables were
+categorized
+
+(c) If relevant, consider translating estimates of relative risk into
+absolute risk for a meaningful time period
+
+Other analyses 
+--------------
+
+Report other analyses done—eg analyses of subgroups and interactions,
+and sensitivity analyses 
+-->
+
+You can include code in this document like this:
+
+```{r main, echo=FALSE}
+source("main.R") ## This "imports" the main script file of your project and run any code in it
+```
+
+You can also embed plots:
+
+```{r plot, echo=FALSE}
+plot(pressure)
+```
+
+You can also mix text and code, so called inline code, like this: `r 2+5`.
+
+Discussion
+==========
+
+<!--
+
+Key results
+-----------
+Summarise key results with reference to study objectives
+
+Limitations
+-----------
+
+Discuss limitations of the study, taking into account sources of
+potential bias or imprecision.  Discuss both direction and magnitude
+of any potential bias
+
+Interpretation
+--------------
+
+Give a cautious overall interpretation of results considering
+objectives, limitations, multiplicity of analyses, results from
+similar studies, and other relevant evidence
+
+Generalisability
+----------------
+
+Discuss the generalisability (external validity) of the study results
+
+-->
+
+Conclusion
+==========
+
+<!-- Give a short conclusion, corresponding to the aim -->
+
+References
+==========
+
+<!-- Do not edit by hand, references will be inserted and formatted automatically once you knit this document -->
