--- a/project-plan.qmd
+++ b/project-plan.qmd
@@ -157,8 +157,8 @@ Participants
 ------------
 Included in the study were all adult patients with TBI recorded in the Karolinska trauma registry between 2012 and
 2023 who also had been screened for opportunity for improvements. Furthermore, TBI was defined as a Glasgow Coma
-Scale (GCS) score of ≤8 combined with an Abbreviated Injury Scale (AIS) ≥3 for the head region. Patients were
-eligible irrespective of level of care and were not restricted to intensive care admissions.
+Scale (GCS) score of ≤8 combined with an Abbreviated Injury Scale (AIS) severity ≥3 for the head region.
+Patients were eligible irrespective of level of care and were not restricted to intensive care admissions.
 
 Patients younger than 18 years were excluded, as their trauma follows separate clinical care systems and quality
 review processes that differ from those for adults. Also excluded were patients declared dead on arrival, since
